<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_bg"
    android:padding="@dimen/spacing_lg">

    <!-- Login Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        style="@style/GameCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_marginEnd="@dimen/spacing_md"
        android:backgroundTint="@color/card_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_xl">

            <!-- App Icon and Title -->
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/spacing_md"
                android:contentDescription="@string/app_name"
                android:src="@drawable/game_controller"
                android:background="@drawable/avatar_background"
                android:padding="12dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/login_title"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/spacing_lg"
                android:text="@string/login_title" />

            <!-- Username input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_md"
                android:hint="@string/login_username"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/game_bg"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/accent_blue"
                app:hintTextColor="@color/accent_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_lg"
                android:hint="@string/login_password"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/game_bg"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/accent_blue"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:hintTextColor="@color/accent_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Login button -->
            <Button
                android:id="@+id/button_login"
                style="@style/GameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/accent_blue"
                android:text="@string/login_button"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
